# binaryornot-rs

./: README.md  architecture.md  quickref.md
src/binaryornot-rs/: Cargo.toml  pyproject.toml
src/binaryornot-rs/src/: check.rs  extensions.rs  features.rs  lib.rs  main.rs  pyo3.rs  signatures.rs  tree.rs
src/binaryornot-rs/tests/: benchmark.py  test_binaryornot_rs.py  test_check.rs  test_encoding_coverage.py  test_encoding_warning.py  test_sdist.py
